Fix Div Grid on certain numbers that caused overflow issue

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
     margin: 0 auto;
     position: relative;
     top: 10px;
-    background-color: black;
+    background-color: #5CC7FF;
     box-shadow: 5px 10px 18px #888888;
 }
 .gridBlock  {
@@ -23,6 +23,7 @@ body{
     height: 20px;
     background-color: #D4FF55;
     float: left;
+    overflow: auto;
 }
 
 .header_section {
